--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ main > article:first-child > .article-image-section {
 }
 
 main > article:nth-child(2) > .article-image-section {
-  background-image: url("./assets/fobbo.png");
+  background-image: url("./assets/reedu.png");
 }
 
 /* main > article:nth-child(3) > .article-image-section {
