--- a/style.css
+++ b/style.css
@@ -788,6 +788,14 @@ body.menu-toggled > .meta-link > span {
   justify-content: center;
 }
 
+.about-container > .about-skills > .skills-title > h3 {
+  flex-basis: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3rem;
+  margin: 0px;
+  text-transform: uppercase;
+}
+
 .about-container > .about-skills > .skill-list {
   display: flex;
   justify-content: space-around;
@@ -803,4 +811,107 @@ body.menu-toggled > .meta-link > span {
 .about-container > .about-skills > .skill-list > .skill-container > p {
   margin-top: 10px;
   text-align: center;
+}
+
+.about-container > .about-section > .about-experience {
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+}
+
+.about-container > .about-section > .about-experience > h2 {
+  align-self: flex-end;
+  padding-left: 2rem;
+  flex-basis: 50%;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3rem;
+  margin: 0px;
+  text-transform: uppercase;
+}
+
+.about-container > .about-section > .about-experience > .experience-list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 2fr;
+  height: 80%;
+  width: 35%;
+  background-color: rgba(17, 31, 68, 0.3);
+  padding: 2rem;
+  border-radius: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > .date {
+  color: rgba(255, 255, 255, 0.5);
+  align-self: center;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > h2 {
+  align-self: center;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > .job {
+  border: 1px solid var(--highlight-color);
+  border-radius: 2rem;
+  padding: 0.5rem;
+  color: #fff;
+  text-align: center;
+  width: 200px;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > .job2 {
+  border: 1px solid var(--highlight-color);
+  border-radius: 2rem;
+  padding: 0.5rem;
+  color: #fff;
+  text-align: center;
+  width: 120px;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > p {
+  color: rgba(255, 255, 255, 0.5);
+  align-self: center;
+}
+
+.about-container
+  > .about-section
+  > .about-experience
+  > .experience-list
+  > .experience-container
+  > .desc {
+  color: rgba(255, 255, 255, 0.5);
+  align-self: start;
 }
